<resources>
    <string name="app_name">Magic League</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Perfil</string>
    <string name="title_leagues">Torneos</string>
    <string name="join_league">Unirse a una liga</string>
    <string name="join_league_description">Escribe el código de la competicion para unirte</string>
    <string name="join_button">Unirse</string>
    <string name="firstable">¡Antes de nada!</string>
    <string name="start_description">Escribe aquí con que nombre quieres que te conozcan</string>
    <string name="st_continue">Continuar</string>
    <string name="save">Guardar</string>
    <string name="create_league">Crear una liga</string>
    <string name="create_league_description">¿Que nombre quieres que tenga la liga?</string>
    <string name="create_league_button">Crear Liga</string>
    <string name="title_activity_league">LeagueActivity</string>
    <string name="tab_clasification">Clasificacion</string>
    <string name="tab_matches">Enfrentamientos</string>
    <string name="TODO">EN DESARROLLO</string>
    <string name="text_copy_to_clipboard">Código copiado al portapapeles</string>
    <string name="state_league_getting_organized">Organizandose</string>
    <string name="state_league_in_progress">En progreso</string>
    <string name="state_league_finished">Terminada</string>
    <string name="start_league">Comenzar liga</string>
    <string name="laps_number_text">Numero de vueltas</string>
    <string name="tab_configuration">Organización</string>
    <string name="league_name">Nombre de la liga</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="league_not_started">La liga aún no ha empezado</string>
    <string name="vs">vs</string>
    <string name="title_activity_life_counter">Contador de vidas</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="decks">Mazos</string>
    <string name="add_deck">Añadir mazo</string>
    <string name="create_deck_description">Escribe el nombre con el que identificaras tu mazo.</string>
    <string name="create_deck_color_description">Selecciona los colores de tu mazo</string>
    <string name="add_deck_button">Añadir</string>
    <string name="looking_for_league">Buscando la liga…</string>
    <string name="league_finded">¡Hemos encontrado la liga!</string>
    <string name="choose_deck_description">Elige el mazo con el que vas a jugar esta liga</string>
    <string name="search_league_button">Buscar liga</string>
    <string name="creating_league">Creando liga…</string>
    <string name="deck_name">Nombre del mazo</string>
    <string name="create_deck_title">Añade tu mazo</string>
    <string name="white_deck">Blanco</string>
    <string name="green_deck">Verde</string>
    <string name="red_deck">Rojo</string>
    <string name="blur_deck">Azul</string>
    <string name="black_deck">Negro</string>
    <string name="colorless_deck">Incoloro</string>
    <string name="blue_deck">Azul</string>
    <string name="delete_dialog_description">¿Seguro que quieres eliminar el mazo?</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="league_code_copied">Codigo de liga copiado</string>
    <string name="player">Jugador</string>
</resources>