<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp">

    <LinearLayout
        android:id="@+id/choose_deck_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/league_finded"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="@color/charcoal"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_700"
            android:text="@string/choose_deck_description"/>

        <Spinner
            android:id="@+id/deck_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            tools:listitem="@layout/item_deck"/>

        <LinearLayout
            android:id="@+id/join_league_button"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="12dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/join_button"
                android:background="@color/orange_700"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/looking_for_league"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_league_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_league"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="@color/charcoal"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_league_description"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/et_league_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minWidth="170dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:hint="CODIGO"/>

        <LinearLayout
            android:id="@+id/search_league_button"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="12dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/search_league_button"
                android:background="@color/orange_700"/>
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>