<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/charcoal">

    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/grey_200"
        android:textStyle="bold"
        android:text="@string/firstable" />

    <TextView
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/grey_200"
        android:text="@string/start_description" />

    <EditText
        android:id="@+id/et_player_name"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@color/grey_200"
        android:hint="Nissa"
        android:textColorHint="@color/grey_700"/>

    <Button
        android:id="@+id/continue_button"
        android:layout_marginTop="40dp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange_700"
        android:text="@string/st_continue" />
</LinearLayout>