<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_league"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="@color/charcoal"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_league_description"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/et_league_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minWidth="170dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:hint="Mi liga"/>

        <LinearLayout
            android:id="@+id/create_league_button"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="12dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/create_league_button"
                android:background="@color/orange_700"/>
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>