<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:padding="16dp"
    android:background="@color/charcoal">

    <TextView
        android:id="@+id/league_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/league_name"
        android:textSize="16sp"
        android:textColor="@color/grey_200" />

    <EditText
        android:id="@+id/et_league_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@id/league_name_title"/>

    <TextView
        android:id="@+id/laps_league_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/grey_200"
        android:textSize="16sp"
        android:text="@string/laps_number_text"
        android:layout_below="@id/et_league_name"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/laps_league_saved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_200"
        android:textSize="30sp"
        android:text="@string/laps_number_text"
        android:layout_below="@id/laps_league_title"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:text="2"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/laps_league_title" >

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="Indefinida" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_league_laps"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/laps_league_title"
        android:layout_marginStart="50dp"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:text="2"/>

    <Button
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/start_league_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_standard"
        android:backgroundTint="@color/orange_700"
        android:layout_alignParentBottom="true"
        android:text="@string/start_league"/>

</RelativeLayout>