<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_deck"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="@color/charcoal"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_deck_description"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/et_deck_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minWidth="170dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:hint="Mi mazo"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_deck_color_description"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxWhite"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxHeight="20dp"
                android:buttonTint="@color/mtg_white"
                android:text="Blanco" />

            <CheckBox
                android:id="@+id/checkBoxGreen"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/mtg_green"
                android:text="Verde" />

            <CheckBox
                android:id="@+id/checkBoxRed"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/mtg_red"
                android:text="Rojo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxBlue"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/mtg_blue"
                android:text="Azul" />

            <CheckBox
                android:id="@+id/checkBoxBlack"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/mtg_black"
                android:text="Negro" />


            <CheckBox
                android:id="@+id/checkBoxColorless"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/mtg_colorless"
                android:text="Incoloro" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/create_deck_button"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange_700"
                android:padding="12dp"
                android:text="@string/add_deck_button"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>